Implemented Randomizer class

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,14 +1,16 @@
 # Julia Michaely
 
-CMAKE_MINIMUM_REQUIRED (VERSION 3.24) # use feature: fetch content via URL
-CMAKE_POLICY(VERSION 3.24)
+cmake_minimum_required (VERSION 3.24) # use feature: fetch content via URL
+cmake_policy(VERSION 3.24)
 
-PROJECT(Hello)
-PROJECT(HelloTest)
+project(CarstensPuzzle)
+project(TestRandomizer)
+
+include_directories("include")
 
 # GoogleTest requires at least C++14
 set(CMAKE_CXX_STANDARD 14)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-ADD_SUBDIRECTORY(src)
-ADD_SUBDIRECTORY(test)
+add_subdirectory(src)
+add_subdirectory(test)
